# healthq-bot

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.api  README.md  api.py  app.py  pyproject.toml  render.yaml  requirements.txt  test.py
chroma_db/49b6a10d-a71e-4790-a3b4-3135cd4f27de/: index_metadata.pickle
modules/: file_handler.py  llm_setup.py  prompts.py  retriever_chain.py  session_handler.py  vector_store.py
