[project]
name = "healthq"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "arxiv>=2.2.0",
    "bs4>=0.0.2",
    "chromadb>=1.0.15",
    "duckdb>=1.3.2",
    "duckduckgo-search>=8.1.1",
    "faiss-cpu>=1.11.0.post1",
    "fastapi>=0.116.1",
    "ipykernel>=6.30.0",
    "langchain>=0.3.27",
    "langchain-chroma>=0.2.5",
    "langchain-community>=0.3.27",
    "langchain-groq>=0.3.6",
    "langchain-huggingface>=0.3.1",
    "langchain-openai>=0.3.28",
    "langchain-text-splitters>=0.3.9",
    "mysql-connector-python>=9.4.0",
    "numexpr>=2.11.0",
    "openai>=1.98.0",
    "pandas>=2.3.1",
    "pymupdf>=1.26.3",
    "pypdf>=5.9.0",
    "python-dotenv>=1.1.1",
    "sentence-transformers>=5.0.0",
    "sqlalchemy>=2.0.42",
    "streamlit>=1.47.1",
    "unstructured>=0.18.11",
    "uvicorn[standard]>=0.35.0",
    "validators==0.28.1",
    "wikipedia>=1.4.0",
]
